--- a/game_pages/steam.html
+++ b/game_pages/steam.html
@@ -17,7 +17,7 @@
         </a>
     </div>
     <div class="game-container">
-        <div class="game-item"><a href="https://store.steampowered.com/app/384310/Dead_In_Bermuda/?snr=1_7_7_2300_150_1">Dead In Bermuda</a></div>
+        <div class="game-item"><a href="https://store.steampowered.com/app/3506800/Walking_Survival/?snr=1_7_7_2300_150_1">Walking Survival</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
