--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -25,6 +25,7 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.fansipan.idle.summoners.era.heroes.afk">Summoners Era: Idle Strategy</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.fansipan.stickman.shadow.knights.fightinggames">Shadow Knight: Ninja Fighting</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gdx.dh.game.sdefence">Final Castle Defence:Idle RPG</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gtm.trafficpuzzlepremium">Traffic Jam Cars Puzzle Legend</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.nineloops.isos">ISOS: A Tale of Equilibrium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pixelstar.GrowHerosVIP">Grow Heroes VIP : Idle Rpg</a></div>
     </div>
