--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -20,6 +20,7 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=air.com.littlebigplay.games.premium.spellingrightpro">Spelling Right PRO</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.ANOOGAMES.SudokuMasterPremiumOffline">Sudoku Master Premium: Offline</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.ANOOGAMES.WordscapesWordSearchGame">Word Search Game: Offline</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.IQPuzzlesGames.CrosswordQuestPremiumGames">Crossword Quest Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.avalar.athree.epl.gp">Avalar: Shadow War Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.empire.kingdom.idle.defense.td.archer.game.premium">Empire Kingdom: Idle Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.fansipan.idle.summoners.era.heroes.afk">Summoners Era: Idle Strategy</a></div>
@@ -27,7 +28,7 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gdx.dh.game.sdefence">Final Castle Defence:Idle RPG</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gtm.trafficpuzzlepremium">Traffic Jam Cars Puzzle Legend</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.nineloops.isos">ISOS: A Tale of Equilibrium</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pixelstar.GrowHerosVIP">Grow Heroes VIP : Idle Rpg</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.smartgames.word.puzzle.block.crush.wonders">Word Game Wonders: Crossword</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
