--- a/game_pages/humble_choice.html
+++ b/game_pages/humble_choice.html
@@ -17,16 +17,15 @@
         </a>
     </div>
     <div class="game-container">
-        <div class="game-item"><a href="https://www.humblebundle.com/membership">My Time at Sandrock</a></div>
-        <div class="game-item"><a href="https://www.humblebundle.com/membership">Tiny Terry's Turbo Trip</a></div>
-        <div class="game-item"><a href="https://www.humblebundle.com/membership">Aksun Playtest (Aug 8 - Aug 29)</a></div>
-        <div class="game-item"><a href="https://www.humblebundle.com/membership">Wildmender</a></div>
-        <div class="game-item"><a href="https://www.humblebundle.com/membership">Persona 5 Royal</a></div>
-        <div class="game-item"><a href="https://www.humblebundle.com/membership">Lil Gator Game</a></div>
-        <div class="game-item"><a href="https://www.humblebundle.com/membership">Banishers: Ghost of New Eden</a></div>
-        <div class="game-item"><a href="https://www.humblebundle.com/membership">Let's School!</a></div>
-        <div class="game-item"><a href="https://www.humblebundle.com/membership">Warpips</a></div>
+        <div class="game-item"><a href="https://www.humblebundle.com/membership">Return to Monkey Island</a></div>
+        <div class="game-item"><a href="https://www.humblebundle.com/membership">Warhammer 40,000: Speed Freeks</a></div>
+        <div class="game-item"><a href="https://www.humblebundle.com/membership">Eastern Exorcist</a></div>
+        <div class="game-item"><a href="https://www.humblebundle.com/membership">WWE 2K25</a></div>
         <div class="game-item"><a href="https://www.humblebundle.com/membership">Get One Month of IGN Plus</a></div>
+        <div class="game-item"><a href="https://www.humblebundle.com/membership">Destiny 2: Legacy Collection (2025)</a></div>
+        <div class="game-item"><a href="https://www.humblebundle.com/membership">SpellForce: Conquest of Eo</a></div>
+        <div class="game-item"><a href="https://www.humblebundle.com/membership">Grapple Dog</a></div>
+        <div class="game-item"><a href="https://www.humblebundle.com/membership">The Plucky Squire</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
