Hourly update of free games list

--- a/game_pages/steam.html
+++ b/game_pages/steam.html
@@ -17,6 +17,7 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://store.steampowered.com/app/1562780/Broilers/?snr=1_7_7_2300_150_1">Broilers</a></div>
         <div class="game-item"><a href="https://store.steampowered.com/app/934650/World_of_Warships__Smith_Pack/?snr=1_7_7_2300_150_1">World of Warships — Smith Pack</a></div>
     </div>
 <footer>
