--- a/game_pages/prime_gaming.html
+++ b/game_pages/prime_gaming.html
@@ -17,25 +17,7 @@
         </a>
     </div>
     <div class="game-container">
-        <div class="game-item"><a href="https://gaming.amazon.com/into-the-breach-epic/dp/amzn1.pg.item.91396c74-544b-4642-a356-3c45fcd66e22?ingress=amzn&ref_=SM_IntotheBreach_S01_FGWP_CRWN">Into the Breach</a></div>
-        <div class="game-item"><a href="https://gaming.amazon.com/sid-meiers-civilization-iv-the-complete-edition-gog/dp/amzn1.pg.item.f2368999-6acb-4f03-9f99-b14711e926ee?ingress=amzn&ref_=SM_SidMeiersCivilizationIVTheCompleteEdition_S01_FGWP_CRWN">Sid Meier's Civilization IV: The Complete Edition</a></div>
-        <div class="game-item"><a href="https://gaming.amazon.com/dungeons-dragons-ravenloft-series-gog/dp/amzn1.pg.item.55f1ae41-15d1-49bd-99ca-9e5189c1724a?ingress=amzn&ref_=SM_DungeonsDragonsRavenloftSeries_S01_FGWP_CRWN">Dungeons & Dragons: Ravenloft Series</a></div>
-        <div class="game-item"><a href="https://gaming.amazon.com/sid-meiers-civilization-iii-complete-gog/dp/amzn1.pg.item.5fbd746f-789f-4b0e-b428-e61e61e54990?ingress=amzn&ref_=SM_SidMeiersCivilizationIIIComplete_S01_FGWP_CRWN">Sid Meier's Civilization III: Complete</a></div>
-        <div class="game-item"><a href="https://gaming.amazon.com/fate-the-traitor-soul-gog/dp/amzn1.pg.item.3262e6c6-27de-4816-935f-5ceb2698177b?ingress=amzn&ref_=SM_FATETheTraitorSoul_S01_FGWP_CRWN">FATE: The Traitor Soul</a></div>
-        <div class="game-item"><a href="https://gaming.amazon.com/filthy-animals-heist-simulator-epic/dp/amzn1.pg.item.12c2df0c-8e84-484d-b045-b5fd9fee7610?ingress=amzn&ref_=SM_FilthyAnimalsHeistSimulator_S01_FGWP_CRWN">Filthy Animals: Heist Simulator</a></div>
-        <div class="game-item"><a href="https://gaming.amazon.com/marvels-midnight-suns-epic/dp/amzn1.pg.item.34565474-5bb1-47a6-8ee2-814063c5e81f?ingress=amzn&ref_=SM_MarvelsMidnightSuns_S01_FGWP_CRWN">Marvel's Midnight Suns</a></div>
-        <div class="game-item"><a href="https://gaming.amazon.com/besiege-the-splintered-sea-dlc-aga/dp/amzn1.pg.item.14455e46-04d2-4e36-b8b9-daf8af1ee646?ingress=amzn&ref_=SM_BesiegeTheSplinteredSeaDLC_S01_FGWP_CRWN">Besiege + The Splintered Sea DLC</a></div>
-        <div class="game-item"><a href="https://gaming.amazon.com/fantasy-empires-gog/dp/amzn1.pg.item.8d18454f-8b8b-4ee4-a868-9239710669ec?ingress=amzn&ref_=SM_FantasyEmpires_S01_FGWP_CRWN">Fantasy Empires</a></div>
-        <div class="game-item"><a href="https://gaming.amazon.com/silver-box-classics-gog/dp/amzn1.pg.item.a0f2f883-35f6-4f3b-9fbf-23a212b11f2a?ingress=amzn&ref_=SM_SilverBoxClassics_S01_FGWP_CRWN">Silver Box Classics</a></div>
-        <div class="game-item"><a href="https://gaming.amazon.com/heroes-of-loot-gog/dp/amzn1.pg.item.8d2b0758-5651-4021-b4a9-85283ceb5643?ingress=amzn&ref_=SM_HeroesofLoot_S01_FGWP_CRWN">Heroes of Loot</a></div>
-        <div class="game-item"><a href="https://gaming.amazon.com/heroes-of-loot-2-gog/dp/amzn1.pg.item.960ca075-f916-4013-a454-4d7d4d53a496?ingress=amzn&ref_=SM_HeroesofLoot2_S01_FGWP_CRWN">Heroes of Loot 2</a></div>
-        <div class="game-item"><a href="https://gaming.amazon.com/venba-gog/dp/amzn1.pg.item.84eebfbe-d689-4b5c-b728-5e6a10840fe0?ingress=amzn&ref_=SM_Venba_S01_FGWP_CRWN">Venba</a></div>
-        <div class="game-item"><a href="https://gaming.amazon.com/tin-hearts-gog/dp/amzn1.pg.item.c329300a-91ea-41aa-bfe5-d4b22eb87647?ingress=amzn&ref_=SM_TinHearts_S01_FGWP_CRWN">Tin Hearts</a></div>
-        <div class="game-item"><a href="https://gaming.amazon.com/necroking-gog/dp/amzn1.pg.item.2cfc29a9-cb2d-4a6b-b53e-a15b88bf1071?ingress=amzn&ref_=SM_Necroking_S01_FGWP_CRWN">Necroking</a></div>
-        <div class="game-item"><a href="https://gaming.amazon.com/city-legends-the-ghost-of-misty-hill-ce-legacy/dp/amzn1.pg.item.598f7c0e-768c-4699-a769-15c5de6b5e40?ingress=amzn&ref_=SM_CityLegendsTheGhostofMistyHillCE_S01_FGWP_CRWN">City Legends: The Ghost of Misty Hill - CE</a></div>
-        <div class="game-item"><a href="https://gaming.amazon.com/labyrinth-city-pierre-the-maze-detective-aga/dp/amzn1.pg.item.8d9caace-93c2-46c2-b5a8-924158871936?ingress=amzn&ref_=SM_LabyrinthCityPierretheMazeDetective_S01_FGWP_CRWN">Labyrinth City: Pierre the Maze Detective</a></div>
-        <div class="game-item"><a href="https://gaming.amazon.com/the-academy-the-first-riddle-aga/dp/amzn1.adg.product.76ca0756-b581-4cc7-92be-2183c2c43f51?ingress=amzn&ref_=SM_TheAcademyTheFirstRiddle_S02_FGWP_CRWN">The Academy: The First Riddle</a></div>
-        <div class="game-item"><a href="https://gaming.amazon.com/boxes-lost-fragments-epic/dp/amzn1.pg.item.b740ec3a-c3a5-4487-aa0b-7c93923bfc3a?ingress=amzn&ref_=SM_BoxesLostFragments_S01_FGWP_CRWN">Boxes: Lost Fragments</a></div>
+        <p>No free games available today.</p>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
