Hourly update of free games list

--- a/game_pages/gog.html
+++ b/game_pages/gog.html
@@ -17,7 +17,53 @@
         </a>
     </div>
     <div class="game-container">
-        <p>No free games available today.</p>
+        <div class="game-item"><a href="https://www.gog.com/en/game/betrayer">Betrayer</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/dink_smallwood_hd">Dink Smallwood HD</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/the_elder_scrolls_chapter_ii_daggerfall">The Elder Scrolls II: Daggerfall</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/the_elder_scrolls_arena">The Elder Scrolls: Arena</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/fall_of_porcupine_prologue">Fall of Porcupine: Prologue</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/urbek_city_builder_prologue">Urbek City Builder Prologue</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/loria">Loria</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/openttd">OpenTTD</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/samorost_1">Samorost 1</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/postal_classic_and_uncut">POSTAL: Classic and Uncut</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/war_wind">War Wind</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/ascendant">Ascendant</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/akalabeth_world_of_doom">Akalabeth: World of Doom</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/beneath_a_steel_sky">Beneath a Steel Sky (1994)</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/bio_menace">Bio Menace</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/cayne">CAYNE</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/dagon_by_h_p_lovecraft">Dagon: by H. P. Lovecraft</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/the_darkest_tales_into_the_nightmare">The Darkest Tales - Into the Nightmare</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/delores_a_thimbleweed_park_miniadventure">Delores: A Thimbleweed Park Mini-Adventure</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/doomdarks_revenge">Doomdark's Revenge</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/eschalon_book_i">Eschalon: Book I</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/flight_of_the_amazon_queen">Flight of the Amazon Queen</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/gwent_the_witcher_card_game">GWENT: The Witcher Card Game</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/hello_neighbor_demo">Hello Neighbor Alpha Version</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/hellpoint_the_thespian_feast">Hellpoint: The Thespian Feast</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/higurashi_when_they_cry_hou_ch1_onikakushi">Higurashi When They Cry Hou - Ch.1 Onikakushi</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/janosik">Janosik</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/jill_of_the_jungle_the_complete_trilogy">Jill of the Jungle: The Complete Trilogy</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/the_life_and_suffering_of_sir_brante_chapter_12">The Life and Suffering of Sir Brante - Chapter 1 & 2</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/the_lords_of_midnight">The Lords of Midnight</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/lure_of_the_temptress">Lure of the Temptress (1992)</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/martial_law">Martial Law</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/nomads_of_driftland">Nomads of Driftland</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/our_life_beginnings_always">Our Life: Beginnings & Always</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/overload_playable_teaser">Overload - Playable Teaser</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/quake_ii_rtx">Quake II RTX</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/sangfroid_tales_of_werewolves">Sang-Froid: Tales of Werewolves</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/shadow_warrior_complete">Shadow Warrior Classic Complete</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/shores_unknown_demo">Shores Unknown: Arrival</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/stargunner">Stargunner</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/sunrider_mask_of_arcadius">Sunrider: Mask of Arcadius</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/teenagent">Teenagent</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/treasure_adventure_game">Treasure Adventure Game</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/tyrian_2000">Tyrian 2000</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/ultima_iv_quest_of_the_avatar">Ultima™ IV: Quest of the Avatar</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/ultima_worlds_of_adventure_2_martian_dreams">Ultima™ Worlds of Adventure 2: Martian Dreams</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/worlds_of_ultima_the_savage_empire">Worlds of Ultima™: The Savage Empire</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
