Hourly update of free games list

--- a/game_pages/epic.html
+++ b/game_pages/epic.html
@@ -17,7 +17,9 @@
         </a>
     </div>
     <div class="game-container">
-        <p>No free games available today.</p>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/ghostrunner-2">Ghostrunner 2</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/monument-valley-2-addd02">Monument Valley 2</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/the-battle-of-polytopia-12fed6">The Battle of Polytopia</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
