--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -24,8 +24,7 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.eggies.spellingmaster">Spelling Master - Quiz Games</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.eggies.triviamaster">Trivia Master - Quiz Games</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.isavasokur.boymate104p">Brain Game - Boymate10 4P</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pgstudio.survivalpro">Live or Die: Survival Pro</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.redantz.game.za3p">Zombie Age 3 Premium: Survival</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.redantz.game.za2p">Zombie Age 2 Premium: Shooter</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.vtwo.athree.epl.gp">Avalar: Raid of Shadow Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.zigzagame.tokyodebunkerpremium">Tokyo Debunker: Urban Legends</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=net.defensezone2">Defense Zone 2 HD</a></div>
