Hourly update of free games list

--- a/game_pages/steam.html
+++ b/game_pages/steam.html
@@ -17,9 +17,8 @@
         </a>
     </div>
     <div class="game-container">
-        <div class="game-item"><a href="https://store.steampowered.com/app/1448030/Press_Any_Button/?snr=1_7_7_2300_150_1">Press Any Button</a></div>
         <div class="game-item"><a href="https://store.steampowered.com/app/740410/Puzzle_Chambers/?snr=1_7_7_2300_150_1">Puzzle Chambers</a></div>
-        <div class="game-item"><a href="https://store.steampowered.com/app/934650/World_of_Warships__Smith_Pack/?snr=1_7_7_2300_150_1">World of Warships — Smith Pack</a></div>
+        <div class="game-item"><a href="https://store.steampowered.com/app/757910/Away/?snr=1_7_7_2300_150_1">Away</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
