Hourly update of free games list

--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -27,6 +27,7 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.vtwo.athree.epl.gp">Avalar: Raid of Shadow Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.zigzagame.tokyodebunkerpremium">Tokyo Debunker: Urban Legends</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.zitga.ninja.stickman.legends.shadow.wars">Stickman Legends Offline Games</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=net.defensezone3.ultra">Defense Zone 3 Ultra HD</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
