Hourly update of free games list

--- a/game_pages/steam.html
+++ b/game_pages/steam.html
@@ -17,6 +17,7 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://store.steampowered.com/app/740240/Snake_Eyes_Dungeon/?snr=1_7_7_2300_150_1">Snake Eyes Dungeon</a></div>
         <div class="game-item"><a href="https://store.steampowered.com/app/3636070/Wander_Stars_Sketchbook/?snr=1_7_7_2300_150_1">Wander Stars Sketchbook</a></div>
     </div>
 <footer>
