Hourly update of free games list

--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -17,6 +17,7 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.unimob.stickman.master.shadow.premium">Stickman Master Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.BrightMoon.ArcheryArena">Archery Arena</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.GiftBox.DefenChick.Premium">Defenchick: tower defense</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.anogames.WordTowerPremiumPuzzle">Word Tower - Premium Puzzle</a></div>
@@ -29,7 +30,6 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.isavasokur.boymate10">Brain Game - Boymate10</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pixelstar.PixelFBladeVIP">Pixel Blade M VIP</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.playlabs.battle.royale.craft">Battle Royale: Hunger Games</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.smartgames.word.puzzle.block.crush">Words Search - Word Puzzles</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
