Hourly update of free games list

--- a/game_pages/steam.html
+++ b/game_pages/steam.html
@@ -17,6 +17,7 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://store.steampowered.com/app/503560/911_Operator/?snr=1_7_7_2300_150_1">911 Operator</a></div>
         <div class="game-item"><a href="https://store.steampowered.com/app/569610/Distant_Space/?snr=1_7_7_2300_150_1">Distant Space</a></div>
     </div>
 <footer>
