Hourly update of free games list

--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -24,12 +24,7 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.clockmaker.jewellegend.classic.match3.puzzle">Jewels Charm: Match 3 Game Pro</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.dd.mk.vip">[VIP] Missile Dude RPG : idle</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.empire.kingdom.idle.defense.td.archer.game.premium">Empire Kingdom: Idle Premium</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gtm.trafficpuzzlepremium">Traffic Jam Cars Puzzle Legend</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.redantz.game.za2p">Zombie Age 2 Premium: Shooter</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.space.shooter.alien.galaxyattack">Space Shooter: Galaxy Attack</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.vtwo.athree.epl.gp">Avalar: Raid of Shadow Premium</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.whitewind.frog">Frog</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.zitga.ninja.stickman.legends.shadow.wars">Stickman Legends Offline Games</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.memof.at">Memory Game: Fruit</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
