Hourly update of free games list

--- a/game_pages/prime_gaming.html
+++ b/game_pages/prime_gaming.html
@@ -17,6 +17,9 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://gaming.amazon.com/claims/halloween-stories-horror-movie-ce-aga/dp/amzn1.pg.item.d78f16f2-76aa-486f-85b3-686e4253b8fb?g=s&ingress=amzn&ref_=SM_HalloweenStoriesHorrorMovieCE_S01_FGWP_CRWN">Halloween Stories: Horror Movie - CE</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/claims/you-will-die-here-tonight-gog/dp/amzn1.pg.item.b2b4fb56-094b-4248-b5df-96078446160b?g=s&ingress=amzn&ref_=SM_YouWillDieHereTonight_S01_FGWP_CRWN">You Will Die Here Tonight</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/claims/werewolf-the-apocalypse-heart-of-the-forest-aga/dp/amzn1.pg.item.f1278372-9b51-424f-bcb2-d1d113c184eb?g=s&ingress=amzn&ref_=SM_WerewolfTheApocalypseHeartoftheForest_S01_FGWP_CRWN">Werewolf: The Apocalypse - Heart of the Forest</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/claims/fallout-3-game-of-the-year-edition-gog/dp/amzn1.pg.item.91c2b55b-e883-4bf7-8815-08f486d7ca35?g=s&ingress=amzn&ref_=SM_Fallout3GameoftheYearEdition_S02_FGWP_CRWN">Fallout 3: Game of the Year Edition</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/claims/fallout-new-vegas-ultimate-edition-gog/dp/amzn1.pg.item.8b24f09c-6cef-41d7-9a68-21f275c1c110?g=s&ingress=amzn&ref_=SM_FalloutNewVegasUltimateEdition_S02_FGWP_CRWN">Fallout: New Vegas Ultimate Edition</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/claims/xcom-2-gog/dp/amzn1.pg.item.13e05c49-cb97-43b3-82c2-0fab0271a873?g=s&ingress=amzn&ref_=SM_XCOM2_S01_FGWP_CRWN">XCOM 2</a></div>
