Hourly update of free games list

--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -18,18 +18,17 @@
     </div>
     <div class="game-container">
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.space.shooter.alien.galaxyattack">Space Shooter: Galaxy Attack</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.Gameplete.CardFantasyPremium">TripleFantasy Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.anogames.WordTowerPremiumPuzzle">Word Tower - Premium Puzzle</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.catlab.blacksmithvip">Warriors' Market Mayhem VIP :</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.catlab.cookglobalvip">Cooking Quest VIP : Food Wagon</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.clockmaker.jewellegend.classic.match3.puzzle">Jewels Charm: Match 3 Game Pro</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.dd.mk.vip">[VIP] Missile Dude RPG : idle</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.empire.kingdom.idle.defense.td.archer.game.premium">Empire Kingdom: Idle Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.bar10n.find5x">Brain Game - Find5x</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.boymate10.find5x">Find5x</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.boymate10.find5x4p">Brain Game - Find5x 4P</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.isavasokur.boymate10">Brain Game - Boymate10</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.infinity.traffix">Traffix: Traffic Simulator</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.memof.at">Memory Game: Fruit</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.mgif.heroeslegend.idlebattle.action.rpg.premium">Heroes Legend - Epic Fantasy</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
