Hourly update of free games list

--- a/game_pages/gog.html
+++ b/game_pages/gog.html
@@ -26,6 +26,7 @@
         <div class="game-item"><a href="https://www.gog.com/en/game/loria">Loria</a></div>
         <div class="game-item"><a href="https://www.gog.com/en/game/openttd">OpenTTD</a></div>
         <div class="game-item"><a href="https://www.gog.com/en/game/samorost_1">Samorost 1</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/postal_classic_and_uncut">POSTAL: Classic and Uncut</a></div>
         <div class="game-item"><a href="https://www.gog.com/en/game/war_wind">War Wind</a></div>
         <div class="game-item"><a href="https://www.gog.com/en/game/ascendant">Ascendant</a></div>
         <div class="game-item"><a href="https://www.gog.com/en/game/akalabeth_world_of_doom">Akalabeth: World of Doom</a></div>
