Hourly update of free games list

--- a/game_pages/prime_gaming.html
+++ b/game_pages/prime_gaming.html
@@ -17,6 +17,10 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://gaming.amazon.com/claims/gas-station-simulator-epic/dp/amzn1.pg.item.1d1450f8-971b-419e-9890-0a3d81f06925?g=s&ingress=amzn&ref_=SM_GasStationSimulator_S01_FGWP_CRWN">Gas Station Simulator</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/claims/dungeons-dragons-dark-sun-series-gog/dp/amzn1.pg.item.49695837-4b36-491d-9e4a-db88f1767f76?g=s&ingress=amzn&ref_=SM_DungeonsDragonsDarkSunSeries_S01_FGWP_CRWN">Dungeons & Dragons: Dark Sun Series</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/claims/lovecrafts-untold-stories-epic/dp/amzn1.pg.item.3f76ff5b-bef8-4733-9e44-1e071a023a22?g=s&ingress=amzn&ref_=SM_LovecraftsUntoldStories_S01_FGWP_CRWN">Lovecraft's Untold Stories</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/claims/new-tales-from-the-borderlands-epic/dp/amzn1.pg.item.c7f2c4fd-2f63-4b4e-ab71-922692d001fc?g=s&ingress=amzn&ref_=SM_NewTalesfromtheBorderlands_S01_FGWP_CRWN">New Tales from the Borderlands</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/claims/halloween-stories-horror-movie-ce-aga/dp/amzn1.pg.item.d78f16f2-76aa-486f-85b3-686e4253b8fb?g=s&ingress=amzn&ref_=SM_HalloweenStoriesHorrorMovieCE_S01_FGWP_CRWN">Halloween Stories: Horror Movie - CE</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/claims/you-will-die-here-tonight-gog/dp/amzn1.pg.item.b2b4fb56-094b-4248-b5df-96078446160b?g=s&ingress=amzn&ref_=SM_YouWillDieHereTonight_S01_FGWP_CRWN">You Will Die Here Tonight</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/claims/werewolf-the-apocalypse-heart-of-the-forest-aga/dp/amzn1.pg.item.f1278372-9b51-424f-bcb2-d1d113c184eb?g=s&ingress=amzn&ref_=SM_WerewolfTheApocalypseHeartoftheForest_S01_FGWP_CRWN">Werewolf: The Apocalypse - Heart of the Forest</a></div>
