Hourly update of free games list

--- a/game_pages/epic.html
+++ b/game_pages/epic.html
@@ -17,8 +17,9 @@
         </a>
     </div>
     <div class="game-container">
-        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/felix-the-reaper-3f7e62">Felix The Reaper</a></div>
-        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/idle-champions-of-the-forgotten-realms">Idle Champions of the Forgotten Realms</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/scourgebringer">Scourgebringer</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/songs-of-silence-778d86">Songs of Silence</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/zero-hour-8449a0">Zero Hour</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
