Hourly update of free games list

--- a/game_pages/prime_gaming.html
+++ b/game_pages/prime_gaming.html
@@ -17,6 +17,10 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://gaming.amazon.com/claims/fallout-76-pc-microsoft/dp/amzn1.pg.item.c49f06ee-41f3-41cf-b719-0a4a6940b5d0?g=s&ingress=amzn&ref_=SM_Fallout76PC_S03_FGWP_CRWN">Fallout 76 (PC)</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/claims/dark-city-kyiv-ce-aga/dp/amzn1.pg.item.db91c852-8643-4a44-a5e1-20ab4092e317?g=s&ingress=amzn&ref_=SM_DarkCityKyivCE_S01_FGWP_CRWN">Dark City: Kyiv - CE</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/claims/fort-solis-gog/dp/amzn1.pg.item.76bbc460-ccab-4714-b70f-e3b6cb9d2192?g=s&ingress=amzn&ref_=SM_FortSolis_S01_FGWP_CRWN">Fort Solis</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/claims/another-world-20th-anniversary-edition-gog/dp/amzn1.pg.item.8909fde2-8415-4625-bd9d-0e29055ef728?g=s&ingress=amzn&ref_=SM_AnotherWorld20thAnniversaryEdition_S01_FGWP_CRWN">Another World: 20th Anniversary Edition</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/claims/gas-station-simulator-epic/dp/amzn1.pg.item.1d1450f8-971b-419e-9890-0a3d81f06925?g=s&ingress=amzn&ref_=SM_GasStationSimulator_S01_FGWP_CRWN">Gas Station Simulator</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/claims/dungeons-dragons-dark-sun-series-gog/dp/amzn1.pg.item.49695837-4b36-491d-9e4a-db88f1767f76?g=s&ingress=amzn&ref_=SM_DungeonsDragonsDarkSunSeries_S01_FGWP_CRWN">Dungeons & Dragons: Dark Sun Series</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/claims/lovecrafts-untold-stories-epic/dp/amzn1.pg.item.3f76ff5b-bef8-4733-9e44-1e071a023a22?g=s&ingress=amzn&ref_=SM_LovecraftsUntoldStories_S01_FGWP_CRWN">Lovecraft's Untold Stories</a></div>
