Hourly update of free games list

--- a/game_pages/prime_gaming.html
+++ b/game_pages/prime_gaming.html
@@ -17,6 +17,9 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://gaming.amazon.com/claims/plateup-epic/dp/amzn1.pg.item.bc7135d4-6239-4a0f-bd01-6b97eae7d9ea?g=s&ingress=amzn&ref_=SM_PlateUp_S01_FGWP_CRWN">PlateUp!</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/claims/dungeons-dragons-krynn-series-gog/dp/amzn1.pg.item.3aefcf19-f3d9-44f6-b5a8-bc92b661726c?g=s&ingress=amzn&ref_=SM_DungeonsDragonsKrynnSeries_S01_FGWP_CRWN">Dungeons & Dragons: Krynn Series</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/claims/dream-tactics-gog/dp/amzn1.pg.item.f4ecdb00-436e-4380-b646-ac1cb04a2d17?g=s&ingress=amzn&ref_=SM_DreamTactics_S01_FGWP_CRWN">Dream Tactics</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/claims/fallout-76-pc-microsoft/dp/amzn1.pg.item.c49f06ee-41f3-41cf-b719-0a4a6940b5d0?g=s&ingress=amzn&ref_=SM_Fallout76PC_S03_FGWP_CRWN">Fallout 76 (PC)</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/claims/dark-city-kyiv-ce-aga/dp/amzn1.pg.item.db91c852-8643-4a44-a5e1-20ab4092e317?g=s&ingress=amzn&ref_=SM_DarkCityKyivCE_S01_FGWP_CRWN">Dark City: Kyiv - CE</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/claims/fort-solis-gog/dp/amzn1.pg.item.76bbc460-ccab-4714-b70f-e3b6cb9d2192?g=s&ingress=amzn&ref_=SM_FortSolis_S01_FGWP_CRWN">Fort Solis</a></div>
